# chatty

./: .gitignore  CMakeLists.txt  README.md  chatty.h  chatty_database.db  chatty_defs.h  chatty_defs.h.in  chatty_embedded_db_controller.cpp  chatty_embedded_db_controller.h  chatty_embedded_db_includes.h  chatty_embedded_db_interface.cpp  chatty_embedded_db_interface.h  chatty_embedded_db_master.cpp  chatty_embedded_db_master.h  chatty_embedded_db_request.cpp  chatty_embedded_db_request.h  chatty_embedded_db_result.cpp  chatty_embedded_db_result.h  chatty_embedded_db_type_defs.h  chatty_network_master.cpp  chatty_network_master.h  chatty_numeric_string.cpp  chatty_numeric_string.h  chatty_server_main.cpp  chatty_server_main.hpp  chatty_test_client.cpp  chatty_test_client.hpp  chatty_time.cpp  chatty_time.h  chatty_time_defs.h
client_test/: CMakeLists.txt
